--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/signin"
@@ -19,65 +19,79 @@
             android:textAlignment="center"
             android:textColor="@color/soretrak"
             android:textSize="30dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/center"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
+            android:layout_marginTop="70dp"
             android:textAlignment="center"
             android:textColor="@color/soretrak"
-            android:layout_marginTop="70dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <EditText
             android:id="@+id/username"
             style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-            android:background="@drawable/my_input_text"
             android:layout_width="match_parent"
-            android:layout_marginTop="30dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/signin"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/my_input_text"
             android:drawableStart="@drawable/custom_person_icon"
             android:drawablePadding="10dp"
             android:ems="10"
-            android:textSize="20sp"
             android:hint="Username"
+            android:inputType="text"
             android:textColor="@color/black"
-            android:inputType="text" />
+            android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/password"
+
+        <RelativeLayout
+            android:id="@+id/passwordInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/username"
-            android:drawablePadding="10dp"
-            android:background="@drawable/my_input_text"
-            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-            android:ems="10"
-            android:textSize="20sp"
-            android:hint="Password"
-            android:drawableStart="@drawable/custom_password_icon"
             android:layout_marginTop="20dp"
-            android:textColor="@color/black"
-            android:inputType="textPassword"
-            />
+            android:layout_below="@id/username">
 
+            <EditText
+                android:id="@+id/password"
+                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_input_text"
+                android:drawableStart="@drawable/custom_password_icon"
+                android:drawablePadding="10dp"
+                android:ems="10"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                />
+            <include layout="@layout/show_hide_btn"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="15dp"
+                android:layout_centerInParent="true"/>
+
+        </RelativeLayout>
         <Button
+            android:id="@+id/signInBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sign In"
-            android:layout_below="@id/password"
-            android:layout_margin="20dp"
+            android:layout_below="@id/passwordInput"
             android:layout_centerHorizontal="true"
+            android:layout_margin="20dp"
             android:background="@drawable/custom_btn"
-            android:textSize="20sp"
+            android:paddingHorizontal="20dp"
+            android:text="Sign In"
             android:textAllCaps="false"
             android:textColor="@drawable/custom_text_color"
-            android:paddingHorizontal="20dp"
-            android:id="@+id/signInBtn"
-            />
+            android:textSize="20sp" />
+
+
     </RelativeLayout>
 
 </FrameLayout>
