--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,8 +2,13 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.HelloWorldJava" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
+    <style name="SplashStyle" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splashscreen</item>
+    </style>
+    <style name="MainTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar.Bridge">
+
+    </style>
     <style name="Theme.HelloWorldJava" parent="Base.Theme.HelloWorldJava" />
 </resources>
