Added working bottomNavBar and search fragment

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileFragment"
-    >
+    tools:context=".SearchFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Profile Fragment"
+        android:text="Search Fragment"
         android:id="@+id/welcomeTxt"
         android:layout_centerInParent="true"
         android:textAlignment="center"
