--- a/app/src/main/res/drawable/ic_home.xml
+++ b/app/src/main/res/drawable/ic_home.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true" android:drawable="@drawable/ic_home_active">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/soretrak"/>
-            <corners android:radius="20dp"/>
+    <item android:state_checked="true"  android:state_enabled="true" android:drawable="@drawable/ic_home_active">
+
+        <shape android:shape="rectangle" android:visible="true">
+            <solid android:color="@color/soretrakNotFocused"/>
         </shape>
     </item>
     <item android:state_checked="false" android:drawable="@drawable/ic_home_deactive"/>
