--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-    android:padding="40dp">
+    android:layout_margin="40dp">
     <TextView
         android:id="@+id/signin"
         android:layout_width="match_parent"
