--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="soretrak">#fb8c00</color>
     <color name="soretrakNotFocused">#f5ba71</color>
     <color name="grey">#d9d9d9</color>
+    <color name="cardBg">#fffbf8</color>
 </resources>
