--- a/app/src/main/res/layout/card_blog_widget.xml
+++ b/app/src/main/res/layout/card_blog_widget.xml
@@ -1,32 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/blog_card"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:elevation="0dp"
+        android:layout_height="wrap_content"
+        app:cardElevation="1dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_centerInParent="true"
         app:cardCornerRadius="20dp"
+        android:layout_marginVertical="10dp"
         android:backgroundTint="@color/cardBg"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:background="@drawable/blog_ripple"
+            android:clickable="true"
+            android:focusable="true"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginVertical="10dp"
+            android:layout_height="wrap_content"
+            android:paddingVertical="10dp"
             android:paddingStart="10dp">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/blog_img_container"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="0dp"
                 android:elevation="0dp"
                 app:cardCornerRadius="20dp"
-                android:backgroundTint="@color/cardBg"
-                app:layout_constraintWidth_percent="0.5"
+                app:layout_constraintWidth_percent="0.3"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -34,22 +37,73 @@
                     android:id="@+id/blog_img"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_centerVertical="true"
                     android:scaleType="centerCrop"
-                    android:src="@mipmap/blogImg"
+                    android:src="@mipmap/blog_img"
                     />
 
             </androidx.cardview.widget.CardView>
 
             <TextView
+                android:id="@+id/blog_title"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:paddingStart="10dp"
+                android:paddingBottom="10dp"
+                android:text="Why I hate Side-Quests"
+                android:textColor="@color/blogTitle"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toEndOf="@id/blog_img_container"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintWidth_percent="0.65" />
+
+            <TextView
+                android:id="@+id/blog_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Why I hate Side-Quests"
+                android:drawablePadding="4dp"
+                android:paddingStart="10dp"
+                android:text="Graham Walker"
+                android:textColor="@color/blogAuthor"
+                app:drawableStartCompat="@drawable/ic_blog_author"
                 app:layout_constraintStart_toEndOf="@id/blog_img_container"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/blog_title" />
 
+            <TextView
+                android:id="@+id/blog_read_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="4dp"
+                android:paddingStart="10dp"
+                android:text="12"
+                android:textColor="@color/blogAuthor"
+                app:drawableStartCompat="@drawable/ic_blog_read_time"
+                app:layout_constraintBottom_toTopOf="@id/blog_publish_date"
+                app:layout_constraintStart_toEndOf="@id/blog_img_container"
+                app:layout_constraintTop_toBottomOf="@+id/blog_author" />
 
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingStart="3dp"
+                android:text="min read"
+                android:textColor="@color/blogAuthor"
+                app:layout_constraintBottom_toTopOf="@id/blog_publish_date"
+                app:layout_constraintStart_toEndOf="@id/blog_read_time"
+                app:layout_constraintTop_toBottomOf="@+id/blog_author" />
+
+            <TextView
+                android:id="@+id/blog_publish_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawablePadding="4dp"
+                android:paddingStart="10dp"
+                android:text="24 July 2024"
+                android:textColor="@color/blogAuthor"
+                app:drawableStartCompat="@drawable/ic_blog_publish_date"
+                app:layout_constraintStart_toEndOf="@id/blog_img_container"
+                app:layout_constraintTop_toBottomOf="@id/blog_read_time" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
 </RelativeLayout>
