--- a/app/src/main/res/layout/show_hide_btn.xml
+++ b/app/src/main/res/layout/show_hide_btn.xml
@@ -2,9 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-    <Button
+
+    <ToggleButton
         android:id="@+id/showHideBtn"
         android:layout_width="28dp"
+        android:textOff=""
+        android:textOn=""
         android:layout_height="28dp"
-        android:background="@drawable/custom_show_password_btn"/>
+        android:background="@drawable/custom_show_password_btn" />
 </RelativeLayout>
