--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,87 +6,101 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
-    android:layout_margin="40dp">
-    <TextView
-        android:id="@+id/signin"
+    android:layout_margin="40dp"
+    >
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_above="@id/center"
-        android:text="@string/signin"
-        android:textAlignment="center"
-        android:textColor="@color/soretrak"
-        android:textSize="30dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/center"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="70dp"
-        android:textAlignment="center"
-        android:textColor="@color/soretrak"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/username"
-        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/signin"
-        android:layout_marginTop="30dp"
-        android:background="@drawable/my_input_text"
-        android:drawableStart="@drawable/custom_person_icon"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint="Username"
-        android:inputType="text"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
-
-
-    <RelativeLayout
-        android:id="@+id/passwordInput"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_below="@id/username">
-
-        <EditText
-            android:id="@+id/password"
-            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:fitsSystemWindows="true"
+        android:fillViewport="true">
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/my_input_text"
-            android:drawableStart="@drawable/custom_password_icon"
-            android:drawablePadding="10dp"
-            android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            />
-        <include layout="@layout/show_hide_btn"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="15dp"
-            android:layout_centerInParent="true"/>
+            >
+            <TextView
+                android:id="@+id/center"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="70dp"
+                android:textAlignment="center"
+                android:textColor="@color/soretrak"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/signin"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_above="@id/center"
+                android:text="@string/signin"
+                android:textAlignment="center"
+                android:textColor="@color/soretrak"
+                android:textSize="30dp"
+                android:textStyle="bold" />
 
-    </RelativeLayout>
 
-    <Button
 
-        android:id="@+id/signInBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/passwordInput"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"
-        android:background="@drawable/custom_btn"
-        android:paddingHorizontal="20dp"
-        android:text="Sign In"
-        android:textAllCaps="false"
-        android:textColor="@drawable/custom_text_color"
-        android:textSize="20sp" />
+            <EditText
+                android:id="@+id/username"
+                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/signin"
+                android:layout_marginTop="30dp"
+                android:background="@drawable/my_input_text"
+                android:drawableStart="@drawable/custom_person_icon"
+                android:drawablePadding="10dp"
+                android:ems="10"
+                android:hint="Username"
+                android:inputType="text"
+                android:textColor="@color/black"
+                android:textSize="20sp" />
+
+
+            <RelativeLayout
+                android:id="@+id/passwordInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_below="@id/username">
+
+                <EditText
+                    android:id="@+id/password"
+                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/my_input_text"
+                    android:drawableStart="@drawable/custom_password_icon"
+                    android:drawablePadding="10dp"
+                    android:ems="10"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    />
+                <include layout="@layout/show_hide_btn"
+                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginEnd="15dp"
+                    android:layout_centerInParent="true"/>
+
+            </RelativeLayout>
+
+            <Button
+
+                android:id="@+id/signInBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/passwordInput"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="20dp"
+                android:background="@drawable/custom_btn"
+                android:paddingHorizontal="20dp"
+                android:text="Sign In"
+                android:textAllCaps="false"
+                android:textColor="@drawable/custom_text_color"
+                android:textSize="20sp" />
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
