--- a/app/src/main/res/layout/card_blog_widget.xml
+++ b/app/src/main/res/layout/card_blog_widget.xml
@@ -1,19 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
-
     <androidx.cardview.widget.CardView
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardElevation="1dp"
-        android:layout_marginHorizontal="20dp"
         app:cardCornerRadius="20dp"
+        android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
         android:backgroundTint="@color/cardBg"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         >
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/blog_card"
@@ -108,4 +104,3 @@
                 app:layout_constraintTop_toBottomOf="@id/blog_read_time" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-</RelativeLayout>
