added transition between blog card in the HomeFragment and the Blog post in the BlogPostActivity. Also made minor changes in design

--- a/app/src/main/res/drawable/blog_image_background.xml
+++ b/app/src/main/res/drawable/blog_image_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient android:startColor="@color/cardBgFr"
-        android:centerColor="@color/whiteFr"
-        android:endColor="@color/white"
+        android:centerColor="@color/cardBgFr"
+        android:endColor="@color/cardBg"
 
         android:angle="-90"/>
 </shape>
