--- a/app/src/main/res/layout/card_blog_widget.xml
+++ b/app/src/main/res/layout/card_blog_widget.xml
@@ -30,13 +30,15 @@
                 app:layout_constraintWidth_percent="0.3"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                >
                 <ImageView
                     android:id="@+id/blog_img"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
                     android:src="@mipmap/blog_img"
+                    android:transitionName="blog_img_trans"
                     />
 
             </androidx.cardview.widget.CardView>
@@ -53,7 +55,8 @@
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@id/blog_img_container"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.65" />
+                app:layout_constraintWidth_percent="0.65"
+                android:transitionName="blog_text_trans"/>
 
             <TextView
                 android:id="@+id/blog_author"
@@ -62,6 +65,7 @@
                 android:drawablePadding="4dp"
                 android:paddingStart="10dp"
                 android:text="Graham Walker"
+                android:transitionName="blog_author_trans"
                 android:textColor="@color/blogAuthor"
                 app:drawableStartCompat="@drawable/ic_blog_author"
                 app:layout_constraintStart_toEndOf="@id/blog_img_container"
@@ -71,9 +75,10 @@
                 android:id="@+id/blog_read_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:transitionName="blog_read_time_trans"
                 android:drawablePadding="4dp"
                 android:paddingStart="10dp"
-                android:text="12"
+                android:text="12 min read"
                 android:textColor="@color/blogAuthor"
                 app:drawableStartCompat="@drawable/ic_blog_read_time"
                 app:layout_constraintBottom_toTopOf="@id/blog_publish_date"
@@ -81,18 +86,9 @@
                 app:layout_constraintTop_toBottomOf="@+id/blog_author" />
 
             <TextView
-
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="3dp"
-                android:text="min read"
-                android:textColor="@color/blogAuthor"
-                app:layout_constraintBottom_toTopOf="@id/blog_publish_date"
-                app:layout_constraintStart_toEndOf="@id/blog_read_time"
-                app:layout_constraintTop_toBottomOf="@+id/blog_author" />
-
-            <TextView
                 android:id="@+id/blog_publish_date"
+
+                android:transitionName="blog_date_trans"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawablePadding="4dp"
