--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -18,5 +18,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:theme="@style/MyToolbarStyle"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
