Finished profile section

--- a/app/src/main/res/layout/card_blog_widget.xml
+++ b/app/src/main/res/layout/card_blog_widget.xml
@@ -31,6 +31,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                android:transitionName="blog_card_img_trans"
                 >
                 <ImageView
                     android:id="@+id/blog_img"
