--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -44,4 +44,8 @@
     </style>
     <style name="Theme.HelloWorldJava" parent="Base.Theme.HelloWorldJava">
     </style>
+    <style name="AvatarProfile">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
